--- a/WebApplication1/Site.Master
+++ b/WebApplication1/Site.Master
@@ -60,7 +60,8 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <asp:Label ID="LabelUser" class="text-white" runat="server" Text="Label"></asp:Label>
+                <asp:Label ID="LabelUser" class="text-white" runat="server"> <%=Username %> </asp:Label>
+                
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
